feat: add theme support and improve card styling, add README

--- a/main-app/public/index.html
+++ b/main-app/public/index.html
@@ -11,18 +11,18 @@
       --text-secondary: #666666;
       --card-bg: #ffffff;
       --card-border: #e0e0e0;
-      --primary-color: #007bff;
       --badge-bg: #f0f0f0;
+      --primary-color: #007bff;
     }
 
     :root[main-theme='dark'] {
       --bg: #1e1e1e;
       --text: #f0f0f0;
-      --text-secondary: #b0b0b0;
+      --text-secondary: #aaaaaa;
       --card-bg: #2d2d2d;
-      --card-border: #404040;
-      --primary-color: #4a9eff;
-      --badge-bg: #3a3a3a;
+      --card-border: #444444;
+      --badge-bg: #3a3a3a; 
+      --primary-color: #007bff;
     }
 
     * {
